# numstore

./: .clang-format  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CONVENTIONS.md  ChangeLog  GOAL  Gemfile  KEYS.md  LICENSE  MANUAL.md  Makefile  Makefile.am  NEWS  README  README.md  _config.yml  a.out  allocations.md  blog  bnf  bytecode.txt  changelog.txt  client  compile_commands.json  configure.ac  db_create  db_open  debug_flags.txt  dependencies.md  foo  grammar.md  guide.md  history.txt  index.md  log.txt  lore.md  main  (+31 more)
.github/workflows/: ci.yml  pages.yml  test.yml
.libs/: libvectra.la  libvectra.lai  libvectra.so.0  libvectra.so.0.0.0
_posts/: 2025-01-01-announcing-numstore.md  2025-01-01-numstoredb-feature-draft.md
apps/: CMakeLists.txt  analyze.c  cli.c  client.c  client.cpp  cursor.c  db_create.c  db_open.c  hash.c  main  main.c  navigation.c  ndb.cpp  nspprint.c  nstorec.c  nstores.c  parser.c  randtype.c  rpt_write.c  rptree.c  scanner.c  scanning.c  server.c  server.cpp  simple_client.c  test  test.c  test.cpp  tokenizer.cpp  vm.c
apps/examples/nsfslite/: CMakeLists.txt  example10_many_inserts.c  example11_write_stride.c  example12_mixed_operations.c  example13_insert_middle_stride.c  example14_txn.c  example15_large_remove.c  example1_basic_persistence.c  example2_crash_recovery.c  example3_insert_middle.c  example4_stride.c  example5_offset.c  example6_stride_offset.c  example7_remove.c  example8_remove_stride.c  example9_write_update.c  utils.h
apps/scratch/: compiler_example.c  create.c  nsfslite_example.c  parser_example.c  scanner_example.c  thread_pool.c  timer_example.c  write.c
apps/tools/: dlread.c  nspprint.c  walfprint.c
btree/: bmnode.c
cmake/: add_jni_library.cmake  add_lemon_parser.cmake  add_ns_executable.cmake  add_ns_library.cmake  add_python_module.cmake
docs/: core_operations.md  example.ns  node  package-lock.json  package.json
docs/scratch/: databases.txt
docs/sketches/: access_patterns.c  nsdblite_python_sketch.py  nsfslite_python_sketch.py
docs/src/: AboutView.vue  App.vue  HomeView.vue  LanguageGuide.vue  NewsView.vue  main.js
docs/web/: .dockerignore  Dockerfile  README.md  docker-compose.yml  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
ds/bmtree/: bmnode.h
foo/: bar
include/: Buffer.hpp  Dataset.hpp  File.hpp  Numstore.hpp  Stream.hpp  Writer.hpp  _assert.h  argument.hpp  arrays.hpp  bmnode.h  bnode.h  buffer.h  bytes.h  cbuffer.h  compiler.h  config.h  cursor.h  database.h  dataset_meta.h  errors.h  eventloop.h  fdbtree.h  file.h  macros.h  macros.hpp  navigation.h  net.h  ns_assert.h  op.h  os.h  page_alloc.h  paging.h  ranges.hpp  sckctrl.h  sds.h  server.h  stmtctrl.h  str_store.h  string.hpp  testing.h  (+9 more)
include/async/: closure.h  thread_pool.h
include/client/: client.h  linenoise.h  repl.h
include/common/: macros.h  types.h
include/compiler/: Scanner.hpp  compiler.h  expression.h  parser.h  parser.hpp  scanner.h  scanner.hpp  statement.h  token_printer.h  tokens.h  tokens.hpp  type_parser.h
include/core/: buffer.h  string.h
include/cursor/: btree_cursor.h  cursor.h  navigation.h
include/dev/: assert.h  errors.h  logging.h  testing.h
include/domain/: create_server.h  run_client.h  run_server.h
include/ds/: cbuffer.h  circular_buffer.h  llist.h  robin_hood_ht.h  strings.h
include/errors/: error.h
include/hash_map/: hl.h  hm.h
include/hash_table/: hash_table.h
include/impl/: FDDataset.hpp  FileBuffer.hpp  MemoryBuffer.hpp  PosixFile.hpp  PosixStream.hpp  SimpleNumstore.hpp
include/intf/: io.h  logging.h  mm.h  stdlib.h  types.h
include/math/: random.h
include/memory/: page.h  page_alloc.h
include/mm/: lalloc.h
include/nsutils/: page_print.h
include/numstore/: config.h  database.h  datastruct.hpp  dtypes.hpp  errors.hpp  logging.hpp  macros.hpp  testing.hpp  types.hpp  virtual_machine.h
include/os/: file.h  io.h  logging.h  mm.h  stdlib.h  types.h
include/paging/: file_pager.h  memory_page.h  memory_pager.h  page.h  page_manager.h  pager.h  types.h
include/query/: query.h  query_value.h
include/range/: range.h
include/rptree/: dliacin.h  iniacin.h  mem_inner_node.h  rptree.h  seek.h
include/server/: connection.h  connector.h  sckctrl.h  server.h
include/services/: services.h  var_create.h  var_retr.h
include/thirdp/: linenoise.h
include/type/: builder.h  serialization.h  types.h
include/typing/: types.h
include/utils/: bounds.h  deserializer.h  hashing.h  macros.h  numbers.h  serializer.h  strings.h
include/value/: value.h
include/variables/: variable.h  vfile_hashmap.h  vhash_fmt.h  vmem_hashmap.h
include/vm/: execute.h  vm.h
libs/: README.md  config.h
libs/nscompiler/: CMakeLists.txt  compiler.c  create.c  delete.c  expression.c  literal.c  literal_validate_type.c  parser_more.c  query.c  scanner.c  statement.c  tokens.c
libs/nscore/: CMakeLists.txt  adptv_clck_alloc.c  adptv_hash_table.c  alloc.c  cbuffer.c  checksums.c  chunk_alloc.c  cli.c  clock_allocator.c  closure.c  dbl_buffer.c  deserializer.c  error.c  filenames.c  gr_lock.c  hash_table.c  hashing.c  lalloc.c  latch.c  llist.c  numbers.c  promise.c  random.c  serializer.c  spx_latch.c  string.c  strings_utils.c  testing.c  threadpool.c
libs/nspager/: CMakeLists.txt  data_list.c  dirty_page_table.c  dumb_pager.c  file_pager.c  file_pager.h  inner_node.c  inner_node_testing.c  inner_node_testing.h  lock_table.c  page.c  pager.c  txn.c  (+14 more)
src/: Buffer.cpp  Dataset.cpp  Variable.cpp  bmnode.c  bnode.c  btree.c  buffer.c  bytes.c  cbuffer.c  common_assert.h  common_logging.h  common_macros.h  common_string.c  common_string.h  common_testing.c  common_testing.h  compiler.c  cursor.c  database.c  eventloop.c  fdbtree.c  navigation.c  net.c  ns_buffer.c  ns_buffer.h  ns_bytes.c  ns_bytes.h  ns_data_structures.c  ns_data_structures.h  ns_datafile.h  ns_dataset.h  ns_datasource.c  ns_datasource.h  ns_dtype.c  ns_dtype.h  ns_errors.c  ns_errors.h  ns_logging.c  ns_logging.h  ns_macros.h  (+51 more)
tools/: organize_imports.py
(+780 files in other folders)
